--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
-  overflow: hidden;
 }
+
+/*
+font-family: "Lacquer", system-ui;
+font-family: "Mountains of Christmas", serif;
+*/
