--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+.backgroundImg{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  opacity: 0.6;
+}
+
 .App {
   margin: 0;
   text-align: center;
   width: 100vw;
   height: 100vh;
-  background-image: url('./assets/daisies.jpg');
-  background-size: contain;
-  background-repeat: no-repeat;
 }
