about page font updates

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -16,6 +16,10 @@
     flex-direction: column;
 }
 
+.aboutHeader h2{
+    font-family: "Mountains of Christmas", serif;
+}
+
 .backLink{
     display: flex;
     flex-direction: column;
