--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -103,16 +103,16 @@
 }
 
 #char2{
-    margin-left: 90px;
+    margin-left: 15%;
 }
 
 #char3{
-    margin-left: 290px;
+    margin-left: 40%;
 }
 
 #char5{
-    margin-left: 40px;
-    height: 80px;
+    margin-left: 5%;
+    height: 70px;
 }
 
 #char6{
@@ -121,21 +121,21 @@
 
 #char7{
     font-size: 16px;
-    width: 375px;
+    width: 360px;
     text-align: center;
 }
 
 #char8{
-    margin-left: 210px;
+    margin-left: 35%;
 }
 
 #char9{
-    margin-left: 10px;
+    margin-left: 5%;
     font-size: 22px;
 }
 
 #char10{
-    margin-left: 40px;
+    margin-left: 10%;
 }
 
 @media (max-width: 768px){
