move about page contact info

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -85,8 +85,7 @@
 #aboutContact{
     font-size: 22px;
     font-family: "Lacquer", system-ui;
-    position: absolute;
-    bottom: 0;
+    margin-top: 25px;
 }
 
 #aboutContact p{
