change project page

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,54 +1,36 @@
 .projectsContainer{
-    background-size: 40px 40px;
-    background-image:
-        linear-gradient(to right, rgba(58, 153, 221, 0.4) 1px, transparent 1px),
-        linear-gradient(to bottom, rgba(58, 153, 221, 0.4) 1px, transparent 1px);
-}
-
-#ladybug{
-    height: 90px;
-    transform: rotate(-12deg);
-    margin-left: 10px;
-}
-
-.projectsListContainer{
     width: 100%;
+    background-color: black;
+    color: var(--color-accent-two);
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
 }
 
-.projectTile{
-    width: 50%;
-    background: white;
-    opacity: 0.9;
-    height: fit-content;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    box-shadow: 5px 5px 10px rgba(58, 153, 221, 0.4);
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.projectsPreTitle{
+    font-weight: 400;
+    margin: 5px;
 }
 
-.projectTile img{
-    width: 30%;
+.projectsTitle{
+    font-family: 'Miama';
+    font-weight: 400;
+    font-size: 100px;
+    margin: 5px;
 }
 
-.projectTileText{
+.projectsContentBox{
     width: 70%;
+    border: solid 2px var(--color-accent-two);
+    margin: 20px 0px;
+    padding: 10px;
+    text-align: left;
 }
 
-@media (max-width: 1024px){
-    .projectTile{
-        width: 70%;
-    }
-}
-
-@media (max-width: 768px){
-    .projectTile{
-        width: 80%;
-    }
+.projectsWebsiteList a{
+    color: var(--color-accent-two);
 }
