--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 font-family: "Lacquer", system-ui;
 font-family: "Mountains of Christmas", serif;
 font-family: "Playpen Sans", cursive;
+font-family: "Inter", sans-serif;
 */
 
 @font-face{
