--- a/src/components/Explore/Explore.css
+++ b/src/components/Explore/Explore.css
@@ -1,3 +1,10 @@
+.exploreContainer{
+    background-size: 40px 40px;
+    background-image:
+        linear-gradient(to right, rgba(58, 153, 221, 0.4) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(58, 153, 221, 0.4) 1px, transparent 1px);
+}
+
 #dinosaur{
     width: 100px;
 }
