--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -31,6 +31,20 @@
     text-align: left;
 }
 
+.projectsContentBoxTitle{
+    font-family: 'Miama';
+    font-weight: 400;
+    font-size: 50px;
+    margin: 5px;
+}
+
 .projectsWebsiteList a{
     color: var(--color-accent-two);
+}
+
+.projectsFillerImage{
+    width: 300px;
+    height: 200px;
+    background-color: var(--color-accent-two);
+    margin: 5px;
 }
