--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,16 +11,40 @@
     align-items: center;
 }
 
+.projectsNav{
+    margin-bottom: 40px;
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    list-style-type: none;
+    padding: 0px;
+    border: solid 2px var(--color-accent-two);
+
+    a{
+        text-decoration: underline;
+        color: var(--color-accent-two);
+        margin: 15px;
+    }
+}
+
 .projectsPreTitle{
     font-weight: 400;
-    margin: 5px;
+    font-size: 20px;
+    margin: 0px;
 }
 
 .projectsTitle{
     font-family: 'Miama';
     font-weight: 400;
     font-size: 100px;
-    margin: 5px;
+    margin: 0px;
+}
+
+.projectsFrame{
+    width: 250px;
 }
 
 .projectsContentBox{
@@ -38,8 +62,38 @@
     margin: 5px;
 }
 
-.projectsWebsiteList a{
-    color: var(--color-accent-two);
+.projectsWebsiteList{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.websiteTile{
+    width: 30%;
+    margin: 10px;
+
+    p{
+        margin: 0px 0px 7px 0px;
+    }
+
+    img{
+        width: 100%;
+    }
+
+    a{
+        color: var(--color-accent-two);
+        border: solid 1px var(--color-accent-two);
+        border-radius: 12px;
+        padding: 5px;
+        text-decoration: none;
+    }
+
+    a:hover{
+        background-color: var(--color-accent-two);
+        color: black;
+    }
 }
 
 .projectsFillerImage{
