--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,4 +1,5 @@
 .projectsContainer{
+    padding-top: 10px;
     width: 100%;
     background-color: black;
     color: var(--color-accent-two);
@@ -13,7 +14,7 @@
 
 .projectsNav{
     margin-bottom: 40px;
-    width: 80%;
+    width: 70%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -24,10 +25,36 @@
     border: solid 2px var(--color-accent-two);
 
     a{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
         text-decoration: underline;
         color: var(--color-accent-two);
-        margin: 15px;
+        margin: 5px 10px;
     }
+
+    button{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+        text-decoration: underline;
+    }
+}
+
+.projectNavIcon{
+    font-size: 20px;
+    margin: 0px;
 }
 
 .projectsPreTitle{
@@ -43,8 +70,8 @@
     margin: 0px;
 }
 
-.projectsFrame{
-    width: 250px;
+.projectsBow{
+    width: 100px;
 }
 
 .projectsContentBox{
@@ -56,9 +83,9 @@
 }
 
 .projectsContentBoxTitle{
-    font-family: 'Miama';
+    font-family: 'Lacquer', sans-serif;
     font-weight: 400;
-    font-size: 50px;
+    font-size: 35px;
     margin: 5px;
 }
 
