--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,52 +5,99 @@
 }
 
 #aboutContact p{
+    margin: 0px 0px 10px 0px;
+}
+
+.aboutText{
+    width: 80%;
+}
+
+.aboutLine{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.aboutBio{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: left;
+
+    font-family: "Playpen Sans", cursive;
+    font-size: 20px;
+    background-color: rgba(236, 213, 229, 0.5);
+
+    img{
+        height: 200px;
+        margin: 10px;
+    }
+}
+
+.textBasic{
+    font-family: "Inter", sans-serif;
+    font-size: 30px;
     margin: 0px;
 }
 
-#char2{
-    margin-left: 15%;
+.textCursive{
+    font-family: 'Miama';
+    font-size: 50px;
+    margin: 0px;
+    line-height: 1.05;
 }
 
-#char3{
-    margin-left: 40%;
+.textWhimsy{
+    font-family: "Playpen Sans", cursive;
+    font-size: 20px;
+    margin: 0px;
 }
 
-#char4{
-    width: 170px;
-}
-
-#char5{
-    margin-left: 5%;
-    height: 70px;
-}
-
-#char6{
-    margin-left: 60px;
-}
-
-#char7{
-    font-size: 16px;
-    width: 360px;
-    text-align: center;
-}
-
-#char8{
-    margin-left: 35%;
-}
-
-#char9{
-    margin-left: 5%;
-    font-size: 22px;
-}
-
-#char10{
-    margin-left: 10%;
+.textHandwritten{
+    font-family: "Lacquer", system-ui;
+    font-size: 30px;
+    margin: 0px;
 }
 
 @media (max-width: 768px){
-    .aboutText ul{
-        width: 90%;
-        padding-left: 20px;
+    .subpageHeader h1{
+        font-size: 40px;
     }
+    
+    .subpageHeader h2{
+        font-size: 20px;
+    }
+
+    .aboutText {
+        width: 85%;
+        
+    }
+
+    .aboutBio{
+        flex-direction: column;
+        font-size: 16px;
+
+        p{
+            margin: 5px;
+        }
+
+        img{
+            height: 175px;
+        }
+    }
+
+    .textBasic{
+        font-size: 20px;
+    }
+    
+    .textCursive{
+        font-size: 40px;
+    }
+
+    .textHandwritten{
+        font-size: 20px;
+    }
+
 }
