--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -23,33 +23,23 @@
     list-style-type: none;
     padding: 0px;
     border: solid 2px var(--color-accent-two);
+}
 
-    a{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+.projectsNavButton{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 10px;
+    padding: 0px;
 
-        text-decoration: underline;
-        color: var(--color-accent-two);
-        margin: 5px 10px;
-    }
-
-    button{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        background: none;
-        color: inherit;
-        border: none;
-        padding: 0;
-        font: inherit;
-        cursor: pointer;
-        outline: inherit;
-        text-decoration: underline;
-    }
+    text-decoration: underline;
+    color: var(--color-accent-two);
+    font-size: 16px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
 }
 
 .projectNavIcon{
