--- a/src/components/Sources/Sources.css
+++ b/src/components/Sources/Sources.css
@@ -34,3 +34,32 @@
         margin: 2px 0px 10px 0px;
     }
 }
+
+.sourcesList{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+}
+
+.sourcesListItem{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.5);
+
+    img{
+        width: 80px;
+    }
+
+    a{
+        color: black;
+        margin-left: 5px;
+    }
+}
