--- a/src/components/Sources/Sources.css
+++ b/src/components/Sources/Sources.css
@@ -54,12 +54,14 @@
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.5);
 
+    max-width: 300px;
+
     img{
         width: 80px;
     }
 
     a{
         color: black;
-        margin-left: 5px;
+        margin-left: 10px;
     }
 }
