--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -132,6 +132,29 @@
     }
 }
 
+.fiberArtsTile{
+    width: 23%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    img{
+        width: 100%;
+    }
+
+    h4{
+        font-size: 18px;
+        margin: 2px;
+        text-align: center;
+    }
+
+    p{
+        margin: 2px;
+        text-align: center;
+    }
+}
+
 .projectsFillerImage{
     width: 300px;
     height: 200px;
@@ -151,8 +174,6 @@
 
     .musicVideoTile{
         width: 95%;
-        
-        
     }
 }
 
@@ -169,6 +190,14 @@
     .musicVideoTile{
         iframe{
             height: 220px;
+        }
+    }
+
+    .fiberArtsTile{
+        width: 45%;
+
+        h4{
+            font-size: 16px;
         }
     }
 }
