--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -132,27 +132,10 @@
     }
 }
 
-.fiberArtsTile{
-    width: 23%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    img{
-        width: 100%;
-    }
-
-    h4{
-        font-size: 18px;
-        margin: 2px;
-        text-align: center;
-    }
-
-    p{
-        margin: 2px;
-        text-align: center;
-    }
+.instagramEmbed{
+    display: 'flex';
+    justify-content: 'center';
+    margin: 10px;
 }
 
 .projectsFillerImage{
@@ -190,14 +173,6 @@
     .musicVideoTile{
         iframe{
             height: 220px;
-        }
-    }
-
-    .fiberArtsTile{
-        width: 45%;
-
-        h4{
-            font-size: 16px;
         }
     }
 }
