--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -124,12 +124,15 @@
 
 .musicVideoTile{
     width: 47%;
-    
 
     iframe{
         width: 100%;
         height: 360px;
     }
+}
+
+.touchdesignerTile{
+    width: 23%;
 }
 
 .instagramEmbed{
@@ -158,6 +161,10 @@
     .musicVideoTile{
         width: 95%;
     }
+
+    .touchdesignerTile{
+        width: 30%;
+    }
 }
 
 @media (max-width: 768px){
@@ -174,5 +181,9 @@
         iframe{
             height: 220px;
         }
+    }
+
+    .touchdesignerTile{
+        width: 45%;
     }
 }
