--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -22,58 +22,6 @@
     margin: 0px;
 }
 
-.navContainer{
-   margin-top: 30px;
-   margin-right: 60px;
-   transform: rotate(-10deg);
-}
-
-.navRow{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.navButton{
-    text-decoration: none;
-    color: black;
-    transform: scale(1.0) rotate(10deg);
-    transition: 0.2s ease-in;
-}
-
-.navButton:hover{
-    transform: scale(1.1) rotate(10deg);
-    transition: 0.2s ease-out;
-}
-
-.navImage{
-    height: 100px;
-    padding: 0px;
-    margin: 0px;
-}
-
-#fishImage{
-    height: 80px;
-}
-
-#ladybugImage{
-    transform: rotate(30deg);
-}
-
-#lunamothImage{
-    transform: rotate(-10deg);
-}
-
-.navText{
-    font-family: "Mountains of Christmas", serif;
-    font-size: 40px;
-    padding: 0px;
-    margin: 0px;
-}
-
 #contactText{
     font-family: "Lacquer", system-ui;
     z-index: 1;
@@ -115,24 +63,6 @@
 
 
 @media (max-width: 1024px){
-    .navContainer{
-        margin-top: 40px;
-    }
-    
-    .navText{
-        font-size: 35px;
-    }
-
-    .navImage{
-        height: 90px;
-        padding: 0px;
-        margin: 0px;
-    }
-    
-    #fishImage{
-        height: 70px;
-    }
-
     #contactText{
         bottom: 20px;
         font-size: 25px;
@@ -140,27 +70,13 @@
 }
 
 @media (max-width: 768px){
-    .navContainer{
-        margin-right: 0px;
-    }
-    
-    .navImage{
-        height: 80px;
-        padding: 0px;
-        margin: 0px;
-    }
-    
-    #fishImage{
-        height: 60px;
-    }
-
-    .navText{
-        font-size: 30px;
+    .headerText{
+        margin-left: 20px;
     }
 
     #contactText{
         bottom: 10px;
-        left: 10%;
+        left: 5%;
         font-size: 20px;
         text-wrap: wrap;
         width: 50%;
@@ -177,6 +93,6 @@
     }
 
     #whiteRabbit{
-        width: 30%;
+        width: 35%;
     }
 }
